# flashcards

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: deploy.yml
src/: app.py  config.py  models.py  provider.py
src/api/: __init__.py  cards.py  quiz.py  schemas.py
src/domain/: __init__.py  models.py
src/handlers/: __init__.py  add_card.py  filters.py  quiz.py  start.py
src/services/: __init__.py  card_service.py  quiz_service.py
